--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://img.icons8.com/?size=100&id=GsMdC9NCKCAD&format=png&color=000000" />
+    <link rel="icon" href="https://i.pinimg.com/736x/8d/30/7f/8d307fd617cfa891caf1249bdf694925.jpg" />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>My</title>
+    <title>My Feed</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
